--- a/Viikko1/tehtavat14-16/NhlStatistics1/build.gradle
+++ b/Viikko1/tehtavat14-16/NhlStatistics1/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'application'
+    id 'jacoco'
 }
 
 repositories {
@@ -17,4 +18,27 @@ application {
 
 run{
     standardInput = System.in
+}
+
+jar {
+    manifest {
+        attributes 'Main-Class': 'ohtu.ohtuvarasto.Main'
+    }
+}
+
+jacocoTestReport {
+    reports {
+        xml.enabled true
+        html.enabled true
+    }
+    dependsOn test // tests are required to run before generating the report
+
+    afterEvaluate {
+        classDirectories.setFrom(files(classDirectories.files.collect {
+            fileTree(dir: it, exclude: [
+                "**/Main.*"
+                
+            ])
+        }))
+    }
 }
